--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@ We provide authentic recipes, ingredients and utensils to truely eat like a loca
                   </div>
     
       <div class="wow fadeInUp" id="box">
-		<h1>Inside the Box</h1>
-		<p> Our first Abroad box will be from Thailand. Thai food is a combination between Chinese and Indian food. 
-		Our culture as a whole is very influenced by both of these regions, including our food, architecture, and language.</p>
+		<img src="abroad-box.png">
                   </div>    
 
         
