--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ We provide authentic recipes, ingredients and utensils to truely eat like a loca
 		<div id="insidebox">
 		<h1>Inside the Box</h1>
 		<p> Our first Abroad box will be from Thailand. Thai food is a combination between Chinese and Indian food. 
-		Our culture as a whole is very influenced by both of these regions, including our food, architecture, and language.</p>
+		and the culture as a whole is very influenced by both of these regions, including food, architecture, and language.</p>
             </div>     
              </div>
     
