--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ We provide authentic recipes, ingredients and utensils to truely eat like a loca
     <div class="wow fadeInUp textsection" >
 		<div id="insidebox">
 		<h1>Inside the Box</h1>
-		<p> Our first Abroad box will be from Thailand. Thai food is a combination between Chinese and Indian food. 
+		<p> Our first Abroad box will explre Thailand. Thai food is a combination between Chinese and Indian food. 
 		and the culture as a whole is very influenced by both of these regions, including food, architecture, and language.</p>
             </div>     
              </div>
