--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <p id="intro-text">
     Food that tells a story. 
-Explore cultures around the world.
+Learn more about cultures and people around the world.
 We provide authentic recipes, ingredients and utensils to truely eat like a local.
     
     </p>
