--- a/explore.html
+++ b/explore.html
@@ -21,12 +21,13 @@
     </head>
     <body class="cover-page">
    
-       <menu><a class="ba-logo" href="#"> <img src="css/blueapron-logo.png" alt="logo"></a>
+       <menu><a class="ba-logo" href="#"> <img src="css/BAlogo.png" alt="logo"></a>
        
        <nav> <ul>
        	<a href="index.html">Abroad</a> 
        	<a href="explore.html">Explore</a> 
 		<a href="order.html">Order</a> 
+		<a href="#">Blue Apron Home</a> 
        </menu>
     
     <header> Blue Apron Abroad</header>
