--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@ We provide authentic recipes, ingredients and utensils to truely eat like a loca
     <div class="wow fadeInUp textsection" >
 		<div id="insidebox">
 		<h1>Inside the Box</h1>
-		<p> Our first Abroad box will explore Thailand. Thai food is a combination between Chinese and Indian food. 
-		and the culture as a whole is very influenced by both of these regions, including food, architecture, and language.</p>
+		<p> Our first Abroad box will explore Thailand. Thai culture is heavily influenced by China and India, affecting everything from the
+		cuisine to the architecture and language. Thai cooking places emphasis on lightly prepared dishes with 
+		strong aromatic components and a spicy edge.</p>
             </div>
             
       <div class="wow fadeInUp" id="box">
