--- a/order.html
+++ b/order.html
@@ -23,7 +23,7 @@
    
        <menu><a class="ba-logo" href="index.html"> <img src="css/BAlogo.png" alt="logo"></a>
        
-       <nav> <ul>
+       <nav class="big-nav"> 
        	<a href="index.html">Abroad</a> 
        	<a href="explore.html">Explore</a> 
 		<a href="order.html">Order</a> 
