--- a/explore.html
+++ b/explore.html
@@ -152,9 +152,7 @@
      
    
      <h1>Phimphitcha "Majic" Busmuang</h1>
-     <p>I’ll be your cooking guide for the next month as we explore Thai food and culture. In Thailand people have two names, one legal name and one nickname. </p>
- 
-<p>I was born in Bangkok, but I grew up in Northern Thailand in Phetchabun Province, which is known as the sweet tamarin region, one of the ingredients we will be using. </p>
+     <p>I’ll be your cooking guide for the next month as we explore Thai food and culture. I was born in Bangkok, but I grew up in Northern Thailand in Phetchabun Province, which is known as the sweet tamarin region, one of the ingredients we will be using. </p>
      </div>
      
    </div>
