--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
     <div class="boxtext"> <p>This Month's Region</p> </div>
 	<div id="insidebox">
 	
-	<h1>Northern Thailand</h1>
+	<h1>Thailand</h1>
 	<p>Explore the culture and cuisine of Thailand with Blue Apron Abroad. Thai practices are heavily influenced by China and India, including food, architecture, and language. Thai cooking places emphasis on lightly prepared dishes with strong aromatic components and a spicy edge. </p>
         </div>
          
@@ -127,6 +127,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
 	
 	</div>
 
+<!--<div class="learnmore" ><a  href="explore.html">Learn more</a></div>--!>
 </div>
         
 
