--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
 	</ul>
 	
 	</div>
+<div class="learnmore" ><a  href="explore.html">Learn more</a></div>
 
-<!--<div class="learnmore" ><a  href="explore.html">Learn more</a></div>--!>
 </div>
+
         
 
 
