--- a/explore.html
+++ b/explore.html
@@ -21,7 +21,7 @@
     </head>
     <body class="cover-page">
    
-       <menu><a class="ba-logo" href="index.html"> <img src="css/Weblogo.png" alt="logo"></a>
+       <menu><a class="ba-logo" href="index.html"> <img src="css/weblogo2.png" alt="logo"></a>
        
        <nav class="big-nav"> 
        	<a href="index.html">Abroad</a> 
