--- a/explore.html
+++ b/explore.html
@@ -153,7 +153,7 @@
      <div class="majic">
      
    
-     <h1>Phimphitcha "Majic" Busmuang</h1>
+     <h1>Phimphitcha "Majic" Aubert</h1>
      <p>I’ll be your cooking guide for the next month as we explore Thai food and culture. I was born in Bangkok, but I grew up in Northern Thailand in Phetchabun Province, which is known as the sweet tamarin region, one of the ingredients we will be using. </p>
      </div>
      
