--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/animate.css">
 
-        
+        <link rel="shortcut icon" href="/css/favicon.ico" type="image/x-icon" />
 
         <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700" rel="stylesheet">
