--- a/explore.html
+++ b/explore.html
@@ -78,8 +78,8 @@
 	
 	<div class="imageset ">
 	
-	<div  class="wow fadeInLeft foodimage1" >
-	 <img src="css/rice.png">
+	<div  class="foodimage1" >
+	 <img class="wow fadeInLeft" src="css/rice.png">
 	 </div>
 	 
 	<div class="thaipictures wow fadeInRight">
@@ -88,21 +88,21 @@
  	
  	</div>
 		
-	<div class="imageset2 wow fadeIn">	
+	<div class="imageset2 ">	
 	<div class="thaipictures2 wow fadeInLeft">
 	<img id="thaipic2" src="css/thailand2.jpg">
  	</div>	
  	
- 	<div  class="wow fadeInRight foodimage" >
-	 <img src="css/chili.png">
+ 	<div  class="foodimage" >
+	 <img class="wow fadeInRight" src="css/chili.png">
 	 </div>
 	 
 	 </div>
 	 
-	 <div class="imageset2 wow fadeIn">	
+	 <div class="imageset2 ">	
 	 
-	 <div  class="wow fadeInLeft foodimage2" >
-	 <img src="css/coconut.png">
+	 <div  class="foodimage2" >
+	 <img class="wow fadeInLeft" src="css/coconut.png">
 	 </div>
 	 
 	<div class="thaipictures wow fadeInRight">
