--- a/explore.html
+++ b/explore.html
@@ -106,7 +106,9 @@
 	 </div>
 	 
 	<div class="thaipictures wow fadeInRight">
-	<iframe id="thaipic3" width="560" height="315" src="https://www.youtube.com/embed/34yDzshB-Xk?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+
+	
+	<iframe id="thaipic3" width="640" height="360" src="https://www.youtube.com/embed/nLG1T-e6TYw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
  	</div>	
  	
  	
