--- a/explore.html
+++ b/explore.html
@@ -99,7 +99,7 @@
 	 
 	 </div>
 	 
-	 <div class="imageset2 ">	
+	 <div class="imageset3 ">	
 	 
 	 <div  class="foodimage2" >
 	 <img class="wow fadeInLeft" src="css/coconut.png">
@@ -107,7 +107,7 @@
 	 
 	<div class="thaipictures wow fadeInRight">
 
-	
+	<p >Explore Thailand in 360</p>	
 	<iframe id="thaipic3" width="640" height="360" src="https://www.youtube.com/embed/nLG1T-e6TYw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
  	</div>	
  	
