--- a/explore.html
+++ b/explore.html
@@ -107,7 +107,7 @@
 	 
 	<div class="thaipictures wow fadeInRight">
 
-	<p >Explore Thailand in 360</p>	
+	<p >Explore Thailand in 360&deg; (176)</p>	
 	<iframe id="thaipic3" width="640" height="360" src="https://www.youtube.com/embed/nLG1T-e6TYw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
  	</div>	
  	
