--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
         </div>
          
     <div class="wow fadeInUp" id="box">
-	 <img src="css/abroad-box.png">
+	 <img src="css/boxabove.png">
 	 </div> 
 	
 	  <div id="ingredients" class="wow fadeInUp" >
