--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="intro">
      
     <img id="pattern" class="wow fadeInDown" src="css/thaipattern-white.png" alt="pattern">
-    <img id="bgimg" src="css/websiteheader.jpg" alt="intro background">
+    <img id="bgimg" src="css/thaiplate.png" alt="intro background">
      
     <div class="introp">
     <p id="intro-text">
