--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
    <div id="explanation">
      
     <div id="explanationimg">
-	<img src="css/thai-pepper.jpg">
+	<iframe width="640" height="360" src="https://www.youtube.com/embed/av3gTjjElFY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
     </div>
     
      <p> Each month explore a new culture in depth under the guidance of a local cook. You'll receive a new recipe and authentic ingredients each week as well as immersive content and stories to connect with a culture through food.</p>
