--- a/order.html
+++ b/order.html
@@ -55,9 +55,12 @@
     <div class="wow fadeInUp textsection" >
    
    	<div class="ordertext">
-    <p> Every month a new regional cuisine. </p>
-    <p>One authentic recipe each week. </p>
-    <p> Add to your current Blue Apron plan or sign up for Abroad.</p>
+    <p>  Receive new regional cuisines every month with one authentic recipe each week.</p>
+    <p>Add to your current Blue Apron plan, or sign up for an Abroad subscription.</p>
+  
+    
+   
+
     
 </div>
 
