--- a/explore.html
+++ b/explore.html
@@ -119,7 +119,7 @@
    </div>
    
    <div class="wow fadeInUp textsection" >
-    <div class="boxtext"> <p>Dishes </p> </div>
+    <div class="boxtextdish"> <p>Dishes </p> </div>
     <div class="dishes wow fadeIn ">
     
    
