--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+ <!–– <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -200,4 +200,4 @@ $(".nav-button").click(function(){
  
         
     </body>
-</html>
+</html> ––>
