--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
- <!–– <html class="no-js" lang="">
-    <head>
+  <html class="no-js" lang="">
+  <!––  <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Blue Apron Abroad</title>
@@ -199,5 +199,5 @@ $(".nav-button").click(function(){
 
  
         
-    </body>
-</html> ––>
+    </body>––>
+</html> 
