--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
   <html class="no-js" lang="">
-  <!––  <head>
+   <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Blue Apron Abroad</title>
@@ -21,7 +21,8 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i" rel="stylesheet">
     </head>
-    <body class="cover-page">
+   <!–– 
+	  <body class="cover-page">
    
        <menu><a class="ba-logo" href="index.html"> <img src="css/weblogo2.png" alt="logo"></a>
        
