--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i" rel="stylesheet">
     </head>
-   <!–– 
+   <!-- 
 	  <body class="cover-page">
    
        <menu><a class="ba-logo" href="index.html"> <img src="css/weblogo2.png" alt="logo"></a>
@@ -200,5 +200,5 @@ $(".nav-button").click(function(){
 
  
         
-    </body>––>
+    </body>-->
 </html> 
