--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
 
 
 </div>
-
+-->
 
 
 	<script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -200,5 +200,5 @@ $(".nav-button").click(function(){
 
  
         
-    </body>-->
+    </body>
 </html> 
