--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
         
 
 
-<div class="wow fadeInUp bottomsection" >
+<!-- <div class="wow fadeInUp bottomsection" >
 
 <div class="button">
 	<a href="order.html">Order a box</a>
@@ -163,7 +163,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
        <p class="disclaimer"> This is speculative student work. </p>
 
 
-</div>
+</div> -->
 -->
 
 
