--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
     
 <div class="wow fadeInUp textsection" >
 	
-<!-- <img src="css/thai-pepper.jpg"> --!>
+<!-- <img src="css/thai-pepper.jpg"> -->
 	<div class="newregions">
 	<h1>Upcoming Boxes</h1>
 	
