--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ We provide authentic recipes, ingredients, and utensils to truly eat like a loca
        <p class="disclaimer"> This is speculative student work. </p>
 
 
-</div> -->
+</div> 
 -->
 
 
