--- a/order.html
+++ b/order.html
@@ -19,6 +19,7 @@
         <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700" rel="stylesheet">
     </head>
+<!--	
     <body class="cover-page">
    
        <menu><a class="ba-logo" href="index.html"> <img src="css/weblogo2.png" alt="logo"></a>
@@ -122,7 +123,7 @@
               new WOW().init();
               </script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+       
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -143,5 +144,5 @@ $(".nav-button").click(function(){
 }); 
 </script>
 
-    </body>
+    </body> -->
     </html>
