--- a/explore.html
+++ b/explore.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Abroad</title>
-        <meta name="description" content="Blue Apron Abroad">
+        <meta name="description" content="Abroad">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
